--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -1,60 +1,18 @@
-/* .sidebar {
-    background-color: transparent;
-    color: 000;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    position: fixed;
-    width: 100vw;
-} 
-.burger {
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 0.25rem;
-    padding: 1rem;
-    position: fixed;
-    z-index: 100;
+.bbe {
+  right: 36px !important;
 }
-.burger svg {
-    width: 2rem;
-    height: 2rem;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    cursor: pointer;
-}
-.sidebar .logo {
-    display: flex;
-    align-items: start;
-    gap: 1rem;
-    padding: 1rem;
-}
-.sidebar .logo img {
-    width: 80px;
-    height: 50px;
-}
-.sidebar .logo h2 {
-    font-size: 1.5rem;
-    font-weight: 800;
-}
-.sidebar .logo p {
-    font-size: 1rem;
-    font-weight: 600;
-} */
 
-
-/* .App {
-  font-family: sans-serif;
-  text-align: center;
-} */
-
-
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  right: 36px !important;
+  top: 36px;
+}
 
 #page-wrap {
   text-align: center;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .bm-item {
@@ -108,11 +66,11 @@
   background: rgba(0, 0, 0, 0.3);
 }
 
-.menu-item{
-        margin: 30px 60px;
-        font-size: 20px;
-        font-weight: 600;
-        color: #fff;
-        text-decoration: none;
-        transition: all 0.3s ease-in-out;
+.menu-item {
+  margin: 30px 60px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
 }
