--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-*{
+/* *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-
 }
 
 body {
@@ -19,9 +18,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
-/* 
+
 @import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 * {
@@ -37,6 +36,6 @@ body {
 
 html,
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   scroll-behavior: smooth;
-} */
+}
